[package]
name = "wstd"
version.workspace = true
license.workspace = true
documentation = "https://docs.rs/wstd"
description = "An async standard library for Wasm Components and WASI 0.2"
readme = "README.md"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]

[dependencies]
futures-core.workspace = true
http.workspace = true
itoa.workspace = true
pin-project-lite.workspace = true
slab.workspace = true
wasi.workspace = true
wstd-macro.workspace = true

[dev-dependencies]
anyhow.workspace = true
futures-lite.workspace = true
serde_json.workspace = true

[workspace]
members = [
    "macro",
    "test-programs",
    "test-programs/artifacts",
]
resolver = "2"

[workspace.package]
version = "0.5.0-draft2"
edition = "2021"
license = "MIT OR Apache-2.0 OR Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/yoshuawuyts/wstd"
keywords = ["WebAssembly", "async", "stdlib", "Components"]
categories = []
authors = [
    "Yoshua Wuyts <rust@yosh.is>",
    "Pat Hickey <pat@moreproductive.org>",
]

[workspace.dependencies]
anyhow = "1"
cargo_metadata = "0.18.1"
futures-core = "0.3.19"
futures-lite = "1.12.0"
heck = "0.5"
http = "1.1"
itoa = "1"
pin-project-lite = "0.2.8"
quote = "1.0"
serde_json = "1"
slab = "0.4.9"
syn = "2.0"
test-log = { version = "0.2", features = ["trace"] }
test-programs = { path = "test-programs" }
test-programs-artifacts = { path = "test-programs/artifacts" }
ureq = { version = "2.12.1", default-features = false }
wasi = "0.14.0"
wasmtime = "26"
wasmtime-wasi = "26"
wasmtime-wasi-http = "26"
wstd = { path = "." }
wstd-macro = { path = "macro", version = "=0.5.0-draft2" }

[package.metadata.docs.rs]
targets = [
    "wasm32-wasip2"
]
