[package]
name = "wstd-futures-time"
version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/wstd-futures-time"
description = "async time combinators for wstd"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <rust@yosh.is>"
]

[features]

[dependencies]
wstd.workspace = true
futures-core = "0.3.19"
pin-project-lite = "0.2.8"
async-channel = "1.6.1"

[dev-dependencies]
futures-lite = "1.12.0"
