[package]
name = "wstd-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "proc-macros for the wstd crate"
documentation = "https://docs.rs/wstd-macro"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote.workspace = true
