[package]
name = "test-programs-artifacts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]

[dev-dependencies]
anyhow.workspace = true
test-log.workspace = true
test-programs-artifacts.workspace = true
ureq.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true

[build-dependencies]
cargo_metadata.workspace = true
heck.workspace = true
